force-app/main/default/objects/Subscription__c/Subscription__c.object-meta.xml
<CustomObject>
    <description>The Subscription object tracks customer subscriptions and ownership. It captures Subscriber, Subscription Date, Subscription ID (external ID, unique), and Subscription Active. Commonly used for subscription lifecycle management, customer-service visibility, and renewal tracking.</description>
    <label>Subscription</label>
    <nameField>
        <displayFormat>SUB-{0000}</displayFormat>
        <label>Subscription Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>