force-app/main/default/objects/Subscription__c/fields/Subscriber__c.field-meta.xml
<CustomField>
    <fullName>Subscriber__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Links the subscription to the contact who owns or receives the subscription.</description>
    <inlineHelpText>Select the contact associated with this subscription record.</inlineHelpText>
    <label>Subscriber</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Subscriptions</relationshipLabel>
    <relationshipName>Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>