force-app/main/default/objects/Subscription__c/fields/Subscription_Active__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the subscription is currently active.</description>
    <inlineHelpText>Select this checkbox when the subscription is active.</inlineHelpText>
    <label>Subscription Active</label>
    <type>Checkbox</type>
</CustomField>