force-app/main/default/objects/Subscription__c/fields/Subscription_Date__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Date__c</fullName>
    <description>Stores the effective date used to track when the subscription starts.</description>
    <inlineHelpText>Enter the date when the subscription becomes effective.</inlineHelpText>
    <label>Subscription Date</label>
    <type>Date</type>
</CustomField>