force-app/main/default/objects/Subscription__c/fields/Subscription_ID__c.field-meta.xml
<CustomField>
    <fullName>Subscription_ID__c</fullName>
    <description>Stores the external system identifier used to match this subscription across integrations.</description>
    <externalId>true</externalId>
    <inlineHelpText>Enter the unique subscription identifier from the source system.</inlineHelpText>
    <label>Subscription ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>